--- a/view/about.html
+++ b/view/about.html
@@ -51,31 +51,57 @@
 			  		</div>
 			  	</div>
 			  	<hr>
-			    <div class="container">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
-				      </div>
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="gallery.html">Gallery</a></li>
-				          <li><a href="event.html">Events</a></li>
-				          <li><a href="ticket.html">Ticket</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>
-				          <li><a href="contact.html">Contact</a></li>
-				          <li class="menu-has-children"><a href="">Pages</a>
-				            <ul>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				              <li><a href="category.html">Category</a></li>
-				              <li><a href="elements.html">Elements</a></li>
-				            </ul>
-				          </li>			          
-				        </ul>
-				      </nav><!-- #nav-menu-container -->		    		
-			    	</div>
-			    </div>
+				  <div class="container">
+					  <div class="row align-items-center justify-content-between d-flex">
+						  <div id="logo">
+							  <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+						  </div>
+						  <nav id="nav-menu-container">
+							  <ul class="nav-menu">
+								  <li class="menu-active"><a href="index.html">Home</a></li>
+								  <li class="menu-has-children"><a href="">Visit</a>
+									  <ul>
+										  <li><a href="book.html">Book</a></li>
+										  <li><a href="contact.html">Address</a></li>
+										  <li><a href="tours.html">School Tours</a></li>
+										  <li><a href="tours.html">Tours</a></li>
+									  </ul>
+								  </li>
+								  <li class="menu-has-children"><a href="">History</a>
+									  <ul>
+										  <li><a href="community-home.html">Communities</a></li>
+										  <li><a href="naval-history.html">Naval History</a></li>
+										  <li><a href="contribution.html">Contribution</a></li>
+										  <li><a href="blog-single.html">Simon Town History</a></li>
+									  </ul>
+								  </li>
+								  <li><a href="places.html">Place</a></li>
+								  <li class="menu-has-children"><a href="">People</a>
+									  <ul>
+										  <li><a href="#">Bios</a></li>
+										  <li><a href="community-home.html">Communities</a></li>
+										  <li><a href="#">Timeline</a></li>
+									  </ul>
+								  </li>
+								  <li class="menu-has-children"><a href="">Collection</a>
+									  <ul>
+										  <li><a href="event.html">Photos</a></li>
+										  <li><a href="event.html">Interview</a></li>
+										  <li><a href="event.html">Objects</a></li>
+									  </ul>
+								  </li>
+								  <li class="menu-has-children"><a href="">Museum</a>
+									  <ul>
+										  <li><a href="about.html">About Us</a></li>
+										  <li><a href="event.html">Event</a></li>
+										  <li><a href="event.html">Projects</a></li>
+										  <li><a href="book.html">Membership</a></li>
+									  </ul>
+								  </li>
+							  </ul>
+						  </nav><!-- #nav-menu-container -->
+					  </div>
+				  </div>
 			  </header><!-- #header -->
 
 
