--- a/view/community-single.html
+++ b/view/community-single.html
@@ -112,9 +112,9 @@
                     <div class="row d-flex align-items-center justify-content-center">
                         <div class="about-content col-lg-12">
                             <h1 class="text-white">
-                                Simon's Town History
+                                Pheonix Community
                             </h1>   
-                            <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="blog-single.html"> Simon's Town History</a></p>
+                            <p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="community-single.html"> community</a></p>
                         </div>                                          
                     </div>
                 </div>
