--- a/view/index.html
+++ b/view/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Art Museum</title>
+		<title>Simon's Town Museum</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -59,19 +59,45 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="gallery.html">Gallery</a></li>
-				          <li><a href="event.html">Events</a></li>
-				          <li><a href="ticket.html">Ticket</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>
-				          <li><a href="contact.html">Contact</a></li>
-				          <li class="menu-has-children"><a href="">Pages</a>
-				            <ul>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				              <li><a href="category.html">Category</a></li>
-				              <li><a href="elements.html">Elements</a></li>
-				            </ul>
-				          </li>			          
+				          <li class="menu-has-children"><a href="">Visit</a>
+							  <ul>
+								  <li><a href="book.html">Book</a></li>
+								  <li><a href="contact.html">Address</a></li>
+								  <li><a href="tours.html">School Tours</a></li>
+								  <li><a href="tours.html">Tours</a></li>
+							  </ul>
+						  </li>
+				          <li class="menu-has-children"><a href="">History</a>
+							  <ul>
+								  <li><a href="community-home.html">Communities</a></li>
+								  <li><a href="naval-history.html">Naval History</a></li>
+								  <li><a href="contribution.html">Contribution</a></li>
+								  <li><a href="blog-single.html">Simon Town History</a></li>
+							  </ul>
+						  </li>
+				          <li><a href="contact.html">Place</a></li>
+				          <li class="menu-has-children"><a href="">People</a>
+							  <ul>
+								  <li><a href="#">Bios</a></li>
+								  <li><a href="community-home.html">Communities</a></li>
+								  <li><a href="#">Timeline</a></li>
+							  </ul>
+						  </li>
+				          <li class="menu-has-children"><a href="">Collection</a>
+							  <ul>
+								  <li><a href="event.html">Photos</a></li>
+								  <li><a href="event.html">Interview</a></li>
+								  <li><a href="event.html">Objects</a></li>
+							  </ul>
+						  </li>
+				          <li class="menu-has-children"><a href="">Museum</a>
+							  <ul>
+								  <li><a href="about.html">About Us</a></li>
+								  <li><a href="event.html">Event</a></li>
+								  <li><a href="event.html">Projects</a></li>
+								  <li><a href="book.html">Membership</a></li>
+							  </ul>
+						  </li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -87,12 +113,9 @@
 						<div class="banner-content col-lg-8">
 							<h6 class="text-white">Openning on 21st February, 2018</h6>
 							<h1 class="text-white">
-								Exhibition on Modern Era				
+								Visit And Learn
 							</h1>
-							<p class="pt-20 pb-20 text-white">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.  sed do eiusmod tempor incididunt..
-							</p>
-							<a href="#" class="primary-btn text-uppercase">Get Started</a>
+							<a href="book.html" style="background-color: #2a00ff; color: #FFFFFF;" class="btn text-uppercase">Book Now</a>
 						</div>											
 					</div>
 				</div>					
