--- a/view/simon-history.html
+++ b/view/simon-history.html
@@ -104,6 +104,7 @@
 				  </div>
 			  </header><!-- #header -->
 
+
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">	
 				<div class="overlay overlay-bg"></div>
@@ -111,73 +112,143 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Upcoming Events		
+								Simon's Town History
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="event.html"> Events</a></p>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="simon-history.html"> Simon's Town History</a></p>
 						</div>											
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->	
 
-			<!-- Start upcoming-event Area -->
-			<section class="upcoming-event-area section-gap" id="events">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-60 col-lg-10">
-							<div class="title text-center">
-								<h1 class="mb-10">Checkout our Upcoming Events</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
-							</div>
-						</div>
-					</div>						
+			<!-- Start quote Area
+			<section class="quote-area pt-100">
+				<div class="container">				
 					<div class="row">
-						<div class="col-lg-6 event-left">
-							<div class="single-events">
-								<img class="img-fluid" src="img/u1.jpg" alt="">
-								<a href="#"><h4>Event on the rock solid carbon</h4></a>
-								<h6><span>21st February</span> at Central government museum</h6>
-								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
-								<a href="#" class="primary-btn text-uppercase">View Details</a>
-							</div>
-							<div class="single-events">
-								<img class="img-fluid" src="img/u3.jpg" alt="">
-								<a href="#"><h4>Event on the rock solid carbon</h4></a>
-								<h6><span>21st February</span> at Central government museum</h6>
-								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
-								<a href="#" class="primary-btn text-uppercase">View Details</a>
-							</div>							
+						<div class="col-lg-6 quote-left">
+							<h1>
+								<span>Music</span> gives soul to the universe, <br>
+								wings to the <span>mind</span>, flight <br>
+								to the <span>imagination</span>.
+							</h1>
 						</div>
-						<div class="col-lg-6 event-right">
-							<div class="single-events">
-								<a href="#"><h4>Event on the rock solid carbon</h4></a>
-								<h6><span>21st February</span> at Central government museum</h6>
-								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
-								<a href="#" class="primary-btn text-uppercase">View Details</a>
-								<img class="img-fluid" src="img/u2.jpg" alt="">
-							</div>
-							<div class="single-events">
-								
-								<a href="#"><h4>Event on the rock solid carbon</h4></a>
-								<h6><span>21st February</span> at Central government museum</h6>
-								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially.
-								</p>
-								<a href="#" class="primary-btn text-uppercase">View Details</a>
-								<img class="img-fluid" src="img/u4.jpg" alt="">
-							</div>							
+						<div class="col-lg-6 quote-right">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
 						</div>
 					</div>
 				</div>	
+			</section>-->
+			<!-- End quote Area -->			
+
+
+			<!-- Start service Area
+			<section class="service-area section-gap" id="about">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="single-service">
+							  <span class="lnr lnr-clock"></span>
+							  <h4>Openning Hours</h4>
+							  <p>
+							  	Mon - Fri: 10.00am to 05.00pm
+								Sat: 12.00pm to 03.00 pm
+								Sunday Closed
+							  </p>						 	
+							  <div class="overlay">
+							    <div class="text">
+							    	<p>
+							    		Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features.that we use in life
+							    	</p>
+							    	<a href="#" class="text-uppercase primary-btn">Buy ticket</a>
+							    </div>
+							  </div>
+							</div>							
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+							  <span class="lnr lnr-rocket"></span>
+							  <h4>Ongoing Exhibitions</h4>
+							  <p>
+							  	Mon - Fri: 10.00am to 05.00pm
+								Sat: 12.00pm to 03.00 pm
+								Sunday Closed
+							  </p>						 	
+							  <div class="overlay">
+							    <div class="text">
+							    	<p>
+							    		Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features.that we use in life
+							    	</p>
+							    	<a href="#" class="text-uppercase primary-btn">Buy ticket</a>
+							    </div>
+							  </div>
+							</div>							
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+							  <span class="lnr lnr-briefcase"></span>
+							  <h4>Openning Events</h4>
+							  <p>
+							  	Mon - Fri: 10.00am to 05.00pm
+								Sat: 12.00pm to 03.00 pm
+								Sunday Closed
+							  </p>						 	
+							  <div class="overlay">
+							    <div class="text">
+							    	<p>
+							    		Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features that we use in life Here, I focus on a range of items and features.that we use in life
+							    	</p>
+							    	<a href="#" class="text-uppercase primary-btn">Buy ticket</a>
+							    </div>
+							  </div>
+							</div>							
+						</div>												
+					</div>
+				</div>	
+			</section>-->
+			<!-- End service Area -->
+
+			<!-- Start about info Area -->
+			<section class="section-gap info-area" id="about">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-40 col-lg-8">
+							<div class="title text-center">
+								<h1 class="mb-10">Few words about our Museum</h1>
+								<p>Who are in extremely love with eco friendly system.</p>
+							</div>
+						</div>
+					</div>					
+					<div class="single-info row mt-40">
+						<div class="col-lg-6 col-md-12 mt-120 text-center no-padding info-left">
+							<div class="info-thumb">
+								<img src="img/pages/about-img.jpg" class="img-fluid" alt="">
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-12 no-padding info-rigth">
+							<div class="info-content">
+								<h2 class="pb-30">We Realize that <br>
+								there are reduced <br>
+								Wastege Stand out</h2>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women.									
+								</p>
+								<br>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women. inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women.									
+								</p>
+								<br>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women.
+								</p>
+								</div>
+						</div>
+					</div>
+				</div>
 			</section>
-			<!-- End upcoming-event Area -->
-		
+			<!-- End about info Area -->
+
 			
 			<!-- Start blog Area -->
 			<section class="blog-area section-gap" id="blog">
@@ -270,7 +341,7 @@
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> and distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								</p>
+								</p>								
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6">
